<resources>
    <string name="app_name">Dermalyze</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_login_page">Demalyze Now!, Login</string>
    <string name="title_signup_page">Fill in your personal information</string>
    <string name="Nama">Nama</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="label">Description</string>
    <string name="post">Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="include_location">Include Location</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="skin">Kulitmu</string>
    <string name="Analysis">Analyze Now</string>
    <string name="description">Analysis terbaik untuk penyakit kulit</string>
    <string name="name">Dermalyze</string>
    <string name="opening">Kenali</string>
    <string name="a">A</string>
    <string name="hi_alea_piraxy">hi, Alea Piraxy</string>
    <string name="notification">Notifikasi</string>
    <string name="dummy_image">kurap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="article">Artikel</string>
    <string name="story">History</string>
    <string name="profile">Profil</string>
    <string name="search">Cari artikel</string>
    <string name="history">History</string>
    <string name="profil">Profile</string>
    <string name="readmore">Readmore</string>
    <string name="kembali">Kembali</string>
    <string name="artikel">Artikel</string>
    <string name="back">Kembali</string>
    <string name="oily_skin">Oily Skin</string>
    <string name="dry_skin">Dry Skin</string>
    <string name="normal_skin">Normal Skin</string>
    <string name="analyze">Analyze</string>
    <string name="take_a_photo">Ambil gambar</string>
    <string name="disease_name">Disease Name</string>
    <string name="description_disease">Description Disease</string>
    <string name="logout">Logout</string>
    <string name="disease">Penyakit Kulit</string>
    <string name="treatment">Penanganan</string>
    <string name="symptom">Gejala0</string>
    <string name="product">Product</string>
    <string name="skincare">Skincare</string>
    <string name="alea_piraxy">Alea Piraxy</string>
    <string name="profile_picture">Foto Profil</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="aleaapiraxy_gmail_com">aleaapiraxy@gmail.com</string>
    <string name="no_telephone">No.Telepon</string>
    <string name="_081217364956">081217364956</string>
    <string name="_21">21 Tahun</string>
    <string name="my_profile">Profil Saya</string>
    <string name="contact_support">Hubungi Kami</string>
    <string name="setting">Pengaturan</string>
    <string name="_1351_177_292">1351_177_292</string>
    <string name="dermalyze_gmail_com">dermalyzeofficial@gmail.com</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="language">Bahasa</string>
    <string name="dark_mode">Mode Malam</string>
    <string name="update">Perbarui</string>
    <string name="your_not_have_notif">Kamu belum mendapatkan notifikasi</string>
    <string name="hi_user">Hi, %1$s</string>
    <string name="self_care_tips">Self Care Tips</string>
    <string name="treatable">Treatable</string>
    <string name="common_causes">Common Causes</string>
    <string name="disease_description">Disease Description</string>
    <string name="skin_type">Skin Type</string>
</resources>