<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_telephone"
        style="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_contact"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_isi_full_name"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:drawableStart="@drawable/outline_call"
        android:gravity="center_vertical"
        android:text="@string/_1351_177_292"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/text_line"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginHorizontal="16dp"
        style="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintTop_toBottomOf="@+id/tv_isi_full_name"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_akun"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:drawablePadding="8dp"
        android:layout_marginHorizontal="16dp"
        android:drawableStart="@drawable/outline_email"
        android:gravity="center_vertical"
        android:background="@drawable/text_line"
        android:text="@string/dermalyze_gmail_com"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp"
        style="@style/TextAppearance.Material3.LabelMedium"
        app:layout_constraintTop_toBottomOf="@+id/tv_akun"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_call"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_whatsapp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/text_line"
        android:text="@string/_081217364956"
        app:layout_constraintTop_toBottomOf="@+id/call"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>