<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="184dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bgbanner"
            android:scaleType="centerCrop"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="16dp"
            app:layout_goneMarginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/skin"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_moto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:text="@string/description"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_moto"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_analys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Analysis"
            android:backgroundTint="@color/green"
            app:cornerRadius="8dp"
            android:layout_marginHorizontal="16dp"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>