<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.analyze.ResultActivity">

    <ImageView
        android:id="@+id/ivResultImage"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/diseaseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/disease_name"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ivResultImage"/>

    <TextView
        android:id="@+id/diseaseDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_disease"
        android:textSize="18sp"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/diseaseName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/backCamera"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/green"
            android:text="@string/camera"
            android:textSize="16sp" />

        <Button
            android:id="@+id/backHome"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/home"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
