<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:textColor="@color/white"
        style="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintTop_toTopOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="@+id/iv_profile"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hi_alea_piraxy"
        android:layout_marginHorizontal="8dp"
        style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
        app:layout_constraintTop_toTopOf="@+id/iv_profile"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_profile"
        app:layout_constraintEnd_toStartOf="@+id/ib_notification"/>

    <ImageButton
        android:id="@+id/ib_notification"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_oval"
        android:src="@drawable/outline_notifications"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:layout_constraintTop_toTopOf="@+id/iv_profile"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/notification" />

</androidx.constraintlayout.widget.ConstraintLayout>